# dev_term

./: .gitignore  Cargo.toml  README.md  config.go  go.mod  go.sum  main.go
.github/workflows/: rust.yml
commands/: cd.go  command.go  command_map.go  download.go  echo.go  exec.go  ls.go  os.go
configuration/: file_colors.json
io/: Cargo.toml
io/src/: lib.rs  tests.rs
src/: main.rs
src/commands/: about.rs  ascii.rs  cd.rs  clear.rs  dirb.rs  exit.rs  help.rs  ls.rs  mod.rs  neofetch.rs
src/commands/base/: command.rs  map.rs  mod.rs
