[package]
name = "dev_term"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
strum = "0.21"
strum_macros = "0.21"
dev_term_io = { path="io", version = "0.1.0"}
walkdir = "2"
regex = "1.5.4"