[package]
name = "dev_term"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
prettytable-rs = "^0.8"
dev_term_io = { path="io", version = "0.1.0"}
walkdir = "2"
regex = "1.5.4"
figlet-rs = "0.1.3"
serde_json = "1.0.79"
dirs = "4.0.0"
reqwest = { version = "0.11.10", features = ["blocking", "socks"] }
rand = "0.8.5"
indicatif = "0.16.2"
anyhow = "1.0.56"